--- a/_config.yml
+++ b/_config.yml
@@ -12,16 +12,17 @@ locale: ca_ES
 ### Personal info and site tools info:
 twitter_username: manelsales
 github_username:  croniqueslinux
-###disqus_shortname: xxxx
+wordpress: croniqueslinux
+disqus_shortname: croniqueslinux
 favicon:     "/images/favicon.ico"
-aboutme: Benvinguts al meu blog, articles antics a https://croniqueslinux.wordpress.com/
+aboutme: Benvinguts al meu blog, articles sobre Gnu/Linux
 aboutme_photo: "/images/norbuks.png" # your photo.
-
+### google_analytics_key: # put YOUR key here to enable tracking! 
 
 ### Site setting:
 ShowContactInfo: "True" # Personal Info (twitter,github,email) can be seen on aboutme-sidebar, those info only shown when ShowContactInfo == True
-default_column: "two" 
-default_locale: "ca" # 
+default_column: "two" # blog style: two columns, if default_column != "two", you will see a one column blog.
+default_locale: "ca" # blog sidebar language set, only include: English(en) and catalan (ca)
 
 locales:
     en:
@@ -35,8 +36,9 @@ locales:
       Previous: "Older"
       Next: "Newer"
       PostedInCategories: "Posted in"
-      Taggedwith: "and tagged"  
+      Taggedwith: "and tagged"
       PostDate: "on "
+      Google_search: "Site Search"
     ca:
       Aboutme: "Sobre mi"
       Archives: "Arxius"
@@ -49,8 +51,8 @@ locales:
       Next: "Articles nous"
       PostedInCategories: "Categories:"   
       Taggedwith: "| Etiquetat:"
-      PostDate: "| data: "
-
+      PostDate: "| data: "    
+      Google_search: "Cerca al blog"
 
 ### llista de pàgines
 
@@ -74,3 +76,4 @@ kramdown:
         syntax_highlighter: rouge
 gems: [jekyll-paginate]
 paginate: 5
+excerpt_separator: <!-- more -->
